syntax = "proto3";

package plugins.couchbase.v1;

import "plugins/common/v1/plugin.proto";

option go_package = "github.com/superblocksteam/agent/types/gen/go/plugins/couchbase/v1";

message Plugin {
  string name = 1;
  CouchbaseConnection connection = 2;

  optional plugins.common.v1.DynamicWorkflowConfiguration dynamic_workflow_configuration = 3;
  plugins.common.v1.SSHConfiguration tunnel = 4;
  // used for all couchbase actions
  string bucket_name = 5;
  oneof couchbase_action {
    plugins.common.v1.SQLExecution run_sql = 6;
    CouchbaseInsert insert = 7;
    CouchbaseGet get = 8;
    CouchbaseRemove remove = 9;
  }

  message CouchbaseIdentifier {
    string scope = 1;
    string collection = 2;
  }

  message CouchbaseConnection {
    string user = 2;
    string password = 3;
    string url = 5;
  }

  message CouchbaseInsert {
    string key = 1;
    string value = 2;
    CouchbaseIdentifier identifier = 3;
  }

  message CouchbaseGet {
    string key = 1;
    CouchbaseIdentifier identifier = 2;
  }

  message CouchbaseRemove {
    string key = 1;
    CouchbaseIdentifier identifier = 2;
  }
}

message Metadata {
  message Collection {
    string name = 1;
  }
  message Scope {
    string name = 1;
    repeated Collection collections = 2; 
  }
  message Bucket {
    string name = 1;
    repeated Scope scopes = 2; 
  }
  repeated Bucket buckets = 1;
}
